--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSPicasso</title>
+    <title>GPT Chat</title>
     <link rel="stylesheet" href="main.css">
-    <script type="module" src="./main.js" defer></script>
+    <script src="./main.js" defer></script>
 </head>
 <body>
     <div class="console">
